--- a/ui/.env
+++ b/ui/.env
@@ -1,7 +1,7 @@
-REACT_APP_LOCALE=es-ES
+VITE_LOCALE=es-ES
 
 // TODO: Change port
-REACT_APP_BASE_URI=
-REACT_APP_API_URI=http://localhost:4000
+VITE_BASE_URI=
+VITE_API_URI=http://localhost:4000
 
 SECRET=e89f987sdfs9d879f8798dsf78978
