--- a/api/package.json
+++ b/api/package.json
@@ -21,8 +21,8 @@
     "src"
   ],
   "dependencies": {
-    "joi": "^17.2.0",
-    "bcrypt": "^5.0.0",
+    "@hapi/joi": "^16.1.7",
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.4",
@@ -38,20 +38,32 @@
     "winston": "^3.2.1"
   },
   "devDependencies": {
-    "@types/bcrypt": "^3.0.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/body-parser": "^1.17.1",
+    "@types/chai": "^4.2.4",
     "@types/compression": "^0.0.36",
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.6",
     "@types/dotenv": "^6.1.1",
     "@types/ejs": "^2.6.3",
     "@types/express": "^4.17.1",
+    "@types/hapi__joi": "^15.0.4",
     "@types/helmet": "^0.0.42",
     "@types/jsonwebtoken": "^8.3.4",
     "@types/module-alias": "^2.0.0",
     "@types/node": "^10.17.0",
-    "@types/swagger-jsdoc": "^0.0.2",
+    "@types/supertest": "^2.0.8",
     "@types/swagger-ui-express": "^3.0.1",
+    "chai": "^4.2.0",
+    "jsdoc": "^3.6.3",
+    "mocha": "^6.2.2",
+    "supertest": "^4.0.2",
+    "nodemon": "^2.0.9",
+    "source-map-loader": "^0.2.4",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^4.1.2",
+    "ts-node": "^10.2.0",
+    "typescript": "^4.8.4",
     "@typescript-eslint/eslint-plugin": "^5.16.0",
     "@typescript-eslint/parser": "^5.16.0",
     "eslint": "^8.11.0",
@@ -61,12 +73,6 @@
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-prettier": "^4.0.0",
-    "nodemon": "^2.0.9",
-    "source-map-loader": "^0.2.4",
-    "swagger-jsdoc": "^3.4.0",
-    "swagger-ui-express": "^4.1.2",
-    "ts-node": "^10.2.0",
-    "typescript": "^4.8.4"
+    "eslint-plugin-prettier": "^4.0.0"
   }
 }
