--- a/ui/package.json
+++ b/ui/package.json
@@ -11,7 +11,6 @@
     "lint:fix": "eslint src --fix"
   },
   "dependencies": {
-    "@types/node": "^18.14.6",
     "i18next": "^19.9.2",
     "i18next-browser-languagedetector": "^6.0.1",
     "jwt-decode": "^3.1.2",
@@ -19,14 +18,16 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
-    "react-i18next": "^12.2.0",
+    "react-i18next": "^11.8.10",
     "react-router": "^6.8.2",
     "react-router-dom": "^6.8.2",
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
+    "@types/node": "^18.14.6",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "@types/react-i18next": "^8.1.0",
     "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.7",
     "@typescript-eslint/eslint-plugin": "^5.54.0",
